--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ img {
 .slider {
   display: flex;
   transition: transform 0.5s ease-out;
-  width: calc(100% * 3); /* Smooth transition effect */
+  width: calc(100% * 3);
 }
 
 .slide {
@@ -95,7 +95,7 @@ img {
   cursor: pointer;
   z-index: 1;
   padding: 0 10px;
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .prevBtn:hover,
@@ -106,37 +106,79 @@ img {
 /* --Navbar  */
 
 .mainNavbar {
+  background-color: #0000000f;
   width: 100%;
   position: relative;
-  border-bottom: 1.5px solid rgb(226, 224, 224);
-  background-color: transparent;
+  border-bottom: 1.5px solid rgb(210, 213, 217);
+  z-index: 1000;
+  /* border: 1px solid red; */
+}
+
+/* Only for Home Component Navbar Color TransParent to White */
+.mainHover {
+  position: relative;
+  overflow: hidden;
+  border-bottom: 1px solid transparent;
+}
+
+.mainHover::before {
+  content: "";
+  position: absolute;
+  top: -100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  transform: scaleY(0);
+  transition: transform 0.5s ease;
+  z-index: 0;
+}
+
+.mainHover:hover::before {
+  transform: scaleY(1);
+}
+
+.mainHover li a {
+  color: #fff;
+  position: relative;
+  z-index: 1;
+  transition: color 0.5s ease;
+}
+
+.mainHover:hover li a {
+  color: rgb(40, 40, 40);
+}
+
+.mainHover .navIcon,
+.mainHover .logo,
+.mainHover .form,
+.mainHover .sideBarIcon {
+  position: relative;
+  filter: invert(100%) brightness(200%);
+  transition: filter 0.3s ease;
   z-index: 1;
 }
 
-.mainHover:hover {
-  background-color: #fff;
-  li a {
-    color: rgb(40, 40, 40);
-  }
+.mainHover:hover .navIcon,
+.mainHover:hover .logo,
+.mainHover:hover .form,
+.mainHover:hover .sideBarIcon {
+  filter: none;
 }
-
-.mainHover {
-  li a {
-    color: #fff;
-  }
-}
+/*  */
 
 /* -Top Navbar  */
 .topNav {
   /* border: 1px solid green; */
   padding-block: 5px;
+  padding-bottom: 7px;
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   padding-inline: 50px;
-  padding-top: 12px;
+  padding-top: 10px;
 }
 
 /* Input Field of Navbar */
@@ -166,9 +208,9 @@ img {
 }
 
 .input {
-  font-family: "Twentieth Century", sans-serif;
+  font-family: myFont;
   letter-spacing: 0.63px;
-  font-size: 15.33px;
+  font-size: 12.83px;
   font-weight: 400;
   font-style: normal;
   background-color: transparent;
@@ -176,6 +218,7 @@ img {
   height: 100%;
   padding-inline: 0.5em;
   border: none;
+  opacity: 0.7;
 }
 
 .form:before {
@@ -223,8 +266,13 @@ input:not(:placeholder-shown) ~ .reset {
 /* --- */
 
 .searchBar {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  gap: 20px;
   height: 100%;
   width: 30%;
+  /* border: 1px solid red; */
 }
 
 .brandLogo {
@@ -266,8 +314,11 @@ input:not(:placeholder-shown) ~ .reset {
 /* -Bottom Navbar */
 
 .bottom {
+  margin: 0 auto;
+  max-width: 1100px;
   /* border: 1px solid red; */
   padding-top: 9px;
+  padding-inline: 50px;
   padding-bottom: 7px;
 }
 
@@ -281,7 +332,7 @@ ul {
 }
 
 li {
-  font-size: 12px;
+  font-size: 11.59px;
   text-transform: uppercase;
   list-style: none;
   font-weight: 550;
@@ -384,5 +435,105 @@ li a:hover {
   to {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+/* Sidebar */
+
+.css-1apkmlw-MuiButtonBase-root-MuiButton-root:hover {
+  --variant-containedBg: none !important;
+  --variant-textBg: none !important;
+  --variant-outlinedBorder: none !important;
+  --variant-outlinedBg: none !important;
+}
+
+.sideBarIcon {
+  height: 22px;
+  width: 22px;
+  transition: all 0.5s ease-in-out;
+  display: none;
+}
+
+.sideBarIcon:hover {
+  opacity: 0.6;
+  scale: 1.05;
+  transition: 0.2s ease-in-out;
+}
+
+.sideBarMenu {
+  cursor: url(../src/assets/icons/xwhite.svg), auto;
+}
+
+/* for total all */
+.css-1u2w381-MuiModal-root-MuiDrawer-root {
+  top: 86.5px !important;
+}
+
+/* for white background one */
+.MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation16.MuiDrawer-paper.MuiDrawer-paperAnchorLeft.css-j400xw-MuiPaper-root-MuiDrawer-paper {
+  top: 86.5px;
+  border-top: 1px solid rgb(210, 213, 217);
+  background-color: #fff;
+  cursor: default;
+}
+
+/* for transparent */
+.MuiBackdrop-root.MuiModal-backdrop.css-i9fmh8-MuiBackdrop-root-MuiModal-backdrop {
+  top: 86.5px;
+}
+
+.MuiPaper-root {
+  --Paper-shadow: none !important;
+}
+
+/* for the smooth close of navbar */
+.sidebarOpenHover {
+  position: relative;
+  overflow: hidden;
+  .logo,
+  .navIcon,
+  .form,
+  .sideBarIcon {
+    filter: none !important;
+  }
+}
+
+.sidebarOpenHover::before {
+  content: "";
+  position: absolute;
+  top: -100%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  transform: scaleY(1);
+  transition: transform 0.5s ease;
+  z-index: 0;
+}
+
+/*  */
+
+@media (min-width: 1400px) {
+  .topBanner {
+    top: -86.2px;
+  }
+  .topNav {
+    padding-bottom: 5px;
+  }
+}
+
+/* Navbar */
+@media (max-width: 1010px) {
+  .topNav {
+    padding-bottom: 6px;
+  }
+  .sideBarIcon {
+    display: block;
+  }
+  .bottom {
+    display: none;
+  }
+  .topBanner {
+    top: -51px;
   }
 }
