added comments for recent changes

--- a/src/index.css
+++ b/src/index.css
@@ -469,6 +469,7 @@ li a:hover {
   top: 86.5px !important;
 }
 
+/* for deployed version issues */
 .css-y28f86 {
   top: 86.5px !important;
 }
@@ -481,6 +482,7 @@ li a:hover {
   cursor: default !important;
 }
 
+/* for deployed version issues */
 .css-nsg84x {
   top: 86.5px !important;
   border-top: 1px solid rgb(210, 213, 217);
@@ -493,6 +495,7 @@ li a:hover {
   top: 86.5px !important;
 }
 
+/* for deployed version issues */
 .css-919eu4 {
   top: 86.5px !important;
 }
