--- a/src/index.css
+++ b/src/index.css
@@ -275,7 +275,7 @@ input:not(:placeholder-shown) ~ .reset {
 .searchBar {
   display: flex;
   align-items: center;
-  gap: 20px;
+  /* gap: 20px; */
   height: 100%;
   width: 30%;
 }
@@ -453,7 +453,7 @@ li a:hover {
 
 /* for deployed version */
 .css-6v2v4c {
-  display: none;
+  display: none !important;
 }
 
 .css-1apkmlw-MuiButtonBase-root-MuiButton-root {
@@ -626,7 +626,7 @@ li a:hover {
     display: none;
   }
   .topBanner {
-    top: -50px;
+    top: -51.5px;
   }
   .MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation16.MuiDrawer-paper.MuiDrawer-paperAnchorLeft.css-j400xw-MuiPaper-root-MuiDrawer-paper {
     width: 450px !important;
@@ -641,7 +641,7 @@ li a:hover {
     display: block;
   }
   .topBanner {
-    top: -87.9px;
+    top: -88.3px;
   }
   .css-1u2w381-MuiModal-root-MuiDrawer-root {
     top: 122.5px !important;
