--- a/src/index.css
+++ b/src/index.css
@@ -526,7 +526,8 @@ li a:hover {
   .navIcon,
   .form,
   .sideBarIcon,
-  .formLower {
+  .formLower,
+  .brandLogo {
     filter: none !important;
   }
 }
@@ -688,6 +689,37 @@ li a:hover {
 }
 
 @media (max-width: 750px) {
+  .bottom-Slide {
+    display: block;
+    padding: 4px 15px;
+    padding-bottom: 9px;
+    border-bottom: none;
+  }
+  .bottomSlider2 {
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    position: relative;
+    overflow-x: auto !important;
+    scroll-behavior: smooth;
+    flex-wrap: nowrap !important;
+    scrollbar-width: none;
+    scroll-snap-type: x mandatory;
+  }
+  li {
+    white-space: nowrap;
+    text-decoration: none;
+    text-align: center;
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: 550;
+    padding: 2px 6px;
+    font-size: 12.5px;
+    background-color: #f2f2f2;
+    border-radius: 3px;
+  }
   html {
     scrollbar-width: none;
   }
