--- a/src/index.css
+++ b/src/index.css
@@ -785,7 +785,7 @@ li a:hover {
   .menuOptName {
     color: #000;
   }
-  
+
   .bottom-Slide li a:hover::after,
   .navActive::after {
     width: 0%;
@@ -1019,4 +1019,432 @@ li a:hover {
 
 .menuBanner img {
   width: 100%;
+}
+
+/* Home CSS (Below banner)*/
+
+.buy1get1Banner {
+  width: 100%;
+}
+
+.buy1get1Banner img {
+  width: 100%;
+}
+
+.full-width {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.categoryBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #afafaf7f;
+  font-size: 26px;
+  @media (max-width: 750px) {
+    font-size: 18px;
+  }
+}
+
+.categoryBtn button {
+  background-color: transparent;
+  border: none;
+  color: #afafaf7f;
+  cursor: pointer;
+  font-size: 29.5px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  line-height: 37.8px;
+  margin-bottom: 30px;
+  @media (max-width: 750px) {
+    font-size: 21px;
+  }
+}
+
+.newArrivalBtn {
+  line-height: 28px !important;
+}
+
+.middleArrow {
+  height: 37.8px;
+  display: flex;
+  align-items: center;
+}
+
+.middleArrowMain {
+  height: 37.8px;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.activeTab {
+  color: #000 !important;
+}
+
+.categoryMain {
+  /* border: 1px solid red; */
+  max-width: 1100px;
+  width: 93%;
+  padding-block: 32px;
+  @media (max-width: 950px) {
+    width: 93%;
+  }
+  @media (max-width: 750px) {
+    width: 94%;
+  }
+}
+
+.categoryCard {
+  /* border: 1px solid blue; */
+  display: flex;
+  overflow-x: auto;
+  flex-wrap: nowrap;
+  scrollbar-width: none;
+  gap: 23px;
+
+  @media (max-width: 1150px) {
+    gap: 20px;
+  }
+  @media (max-width: 1010px) {
+    gap: 18px;
+  }
+  @media (max-width: 950px) {
+    gap: 22px;
+  }
+  @media (max-width: 749px) {
+    gap: 18px;
+  }
+}
+
+.card {
+  /* border: 1px solid red; */
+  flex-shrink: 0;
+  width: 23.4%;
+  /* width: 256px; */
+  /* height: 488px; */
+  overflow: hidden;
+  @media (max-width: 950px) {
+    width: 48.5%;
+  }
+  @media (max-width: 749px) {
+    width: 72.5%;
+  }
+  @media (max-width: 490px) {
+    width: 71.5%;
+  }
+  @media (max-width: 480px) {
+    width: 60.8%;
+  }
+}
+
+.cardImg {
+  background-color: #f2f2f2;
+  overflow: hidden;
+}
+
+.cardImg2 {
+  cursor: pointer;
+  width: 100%;
+  padding-block: 30px;
+  transition: all 0.2s ease-in-out;
+  @media (max-width: 950px) {
+    padding-block: 50px;
+  }
+  @media (max-width: 600px) {
+    padding-block: 45px;
+  }
+  @media (max-width: 510px) {
+    padding-block: 35px;
+  }
+  @media (max-width: 480px) {
+    padding-block: 30px;
+  }
+  @media (max-width: 436px) {
+    padding-block: 27px;
+  }
+  @media (max-width: 410px) {
+    padding-block: 15%;
+  }
+  @media (max-width: 360px) {
+    padding-block: 9%;
+  }
+  @media (max-width: 300px) {
+    padding-block: 7%;
+  }
+}
+
+.cardImg2:hover {
+  scale: calc(1.05);
+}
+
+.cardBottomText {
+  padding-top: 6px;
+  display: flex;
+  flex-direction: column;
+  @media (max-width: 1100px) {
+    padding-top: 0px;
+  }
+}
+
+.ratingReviews {
+  display: flex;
+  padding: 0px;
+  align-items: center;
+  @media (max-width: 1100px) {
+    height: 30px;
+  }
+  @media (max-width: 510px) {
+    height: 38px;
+  }
+}
+
+.ratingReviews img {
+  width: 10px;
+}
+
+.cardProductVariant {
+  color: rgba(33, 35, 38, 0.65);
+  font-size: 10px;
+  letter-spacing: 0.6px;
+  line-height: 12px;
+  margin-top: 10px;
+  text-align: left;
+  overflow: hidden;
+  text-transform: uppercase;
+  unicode-bidi: isolate;
+  text-overflow: ellipsis;
+  -webkit-font-smoothing: antialiased;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  display: -webkit-box !important;
+  min-height: 10px;
+  margin-bottom: 0 !important;
+}
+
+.cardProductName {
+  box-sizing: border-box;
+  color: rgb(26, 27, 24);
+  cursor: pointer;
+  display: -webkit-box !important;
+  font-size: 16.8px;
+  font-style: normal;
+  font-weight: 500;
+  letter-spacing: 0.63px;
+  line-height: 21.6px;
+  margin-top: 2px;
+  min-height: 18px;
+  overflow: hidden;
+  padding-bottom: 2px;
+  text-align: left;
+  text-decoration-color: rgb(26, 27, 24);
+  text-decoration-style: solid;
+  text-decoration-thickness: auto;
+  text-overflow: ellipsis;
+  -webkit-font-smoothing: antialiased;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  @media (max-width: 749px) {
+    font-size: 15.7px;
+  }
+}
+
+.ratingReviews {
+  color: rgb(33, 35, 38);
+  display: flex;
+  align-items: center;
+  font-weight: 550;
+  text-align: left;
+  gap: 2px;
+}
+
+.productRating,
+.productReviews {
+  font-style: normal;
+  font-size: 13.3px;
+  gap: 4px;
+  display: flex;
+  align-items: center;
+  @media (max-width: 300px) {
+    font-size: 12px;
+  }
+}
+
+.productRating img,
+.productReviews img {
+  width: 14px;
+  height: 14px;
+}
+
+.middleArrow {
+  color: #afafafb3;
+}
+
+.cardProductPrice {
+  display: flex;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19.6px;
+  letter-spacing: normal;
+  justify-content: normal;
+  @media (max-width: 480px) {
+    font-size: 15px;
+  }
+}
+
+.addToCartBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin-block: 10px;
+  font-size: 16px;
+  height: 40px;
+  column-gap: 10px;
+  color: rgb(33, 35, 38);
+  letter-spacing: 0.6px;
+  line-height: 28.8px;
+  overflow: hidden;
+  text-align: center;
+}
+
+.addToCartBtn button {
+  width: 100%;
+  box-sizing: border-box;
+  position: relative;
+  transition: all 0.3s ease-in-out;
+  text-align: center;
+  background-color: rgb(23, 22, 21);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffff;
+  letter-spacing: 2.4px;
+  line-height: 14.4px;
+  min-height: 40px;
+  font-weight: bold;
+  border: 0.8px solid rgb(23, 22, 21);
+  outline: none;
+  overflow: hidden;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-wrap: nowrap;
+}
+
+.addToCartBtn button:hover::before {
+  animation: shine 1.5s ease-out infinite;
+}
+
+.addToCartBtn button::before {
+  content: "";
+  position: absolute;
+  width: 100px;
+  height: 100%;
+  background-image: linear-gradient(
+    120deg,
+    rgba(255, 255, 255, 0) 30%,
+    rgba(255, 255, 255, 0.3),
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: 0;
+  left: -100px;
+  opacity: 0.6;
+}
+
+@keyframes shine {
+  0% {
+    left: -100px;
+  }
+
+  60% {
+    left: 100%;
+  }
+
+  to {
+    left: 100%;
+  }
+}
+
+.viewAll {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 28.8px;
+  text-align: center;
+  margin-top: 30px;
+  letter-spacing: 0.6px;
+}
+
+.viewAll button {
+  height: 50px;
+  width: 240px;
+  font-size: 13px;
+  letter-spacing: 2.6px;
+  line-height: 15.6px;
+  text-transform: uppercase;
+  font-weight: 600;
+  background-color: #fff;
+  border: 1px solid #000;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  cursor: pointer;
+  @media (max-width: 750px) {
+    height: 45px;
+  }
+}
+
+.viewAll button::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.viewAll button::after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: rgb(23, 22, 21);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.viewAll button:hover{
+  color: #fff;
+}
+
+.viewAll button:hover::before{
+  top: -35%;
+  background-color: rgb(23, 22, 21);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.viewAll button:hover::after{
+  top: -45%;
+  background-color: rgb(23, 22, 21);
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
 }
