--- a/src/css/productCard.css
+++ b/src/css/productCard.css
@@ -28,16 +28,17 @@
   display: flex;
   overflow: hidden;
   flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 22px;
+  justify-content: start;
+  margin: 0 auto;
+  gap: 2.65%;
   @media (max-width: 1110px) {
-    gap: 20px;
+    gap: 3.5%;
   }
   @media (max-width: 750px) {
-    gap: 16px;
+    gap: 3.6%;
   }
   @media (max-width: 485px) {
-    gap: 10px;
+    gap: 4.9%;
   }
 }
 
@@ -57,7 +58,6 @@
   @media (max-width: 485px) {
     width: 47.5%;
   }
-
 }
 
 .cardImg {
@@ -166,15 +166,59 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media (max-width: 750px) {
+    flex-direction: column;
+    gap: 10px;
+  }
+  @media (max-width: 500px) {
+    padding-block: 15px;
+    gap: 6px;
+  }
 }
 
 .filterAndSortBtn {
   display: block;
   display: flex;
   align-items: center;
-  @media (max-width: 450px) {
+  @media (max-width: 750px) {
     display: none;
   }
+}
+
+.miniFilter {
+  width: 100%;
+  display: none;
+  @media (max-width: 750px) {
+    display: block;
+  }
+  transition: display 0.3s ease-in-out;
+}
+
+.filterAndSortBtnMini {
+  cursor: pointer;
+  font-size: 12px;
+  color: rgb(26, 27, 24);
+  font-weight: 600;
+  letter-spacing: 2.4px;
+  line-height: 21.6px;
+  text-transform: uppercase;
+  width: 100%;
+  border: 1px solid rgb(210, 213, 217);
+  transition: border 0.3s ease-in-out;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-block: 8px;
+  gap: 10px;
+}
+
+.filterAndSortBtnMini:hover {
+  border: 1px solid rgb(26, 27, 24);
+}
+
+.filterIcon {
+  width: 20px;
 }
 
 .plusIcon {
