--- a/src/index.css
+++ b/src/index.css
@@ -389,7 +389,7 @@ li a:hover {
   color: #ea803d;
 }
 
-/* Component scroll Navbar Jumping issue Code */
+/*! Component scroll Navbar Jumping issue Code */
 
 .liElements {
   position: absolute;
@@ -398,55 +398,6 @@ li a:hover {
   background-color: #fff;
   padding-bottom: 3px;
 }
-
-.hide {
-  position: relative;
-}
-
-.shopAllBanner {
-  position: relative;
-}
-
-.shopAllBanner img {
-  display: block;
-  width: 100%;
-  @media (max-width: 750px) {
-    /* display: none; */
-  }
-}
-
-/* hideDiv */
-
-.hideDiv {
-  height: 90px;
-}
-
-@media (max-width: 1065px) {
-  .hideDiv {
-    height: 136.5px;
-  }
-}
-
-@media (max-width: 1030px) {
-  .hideDiv {
-    height: 54.5px;
-  }
-}
-
-@media (max-width: 834px) {
-  .hideDiv {
-    height: 91.5px;
-  }
-}
-
-@media (max-width: 750px) {
-  .hideDiv {
-    height: 132px;
-  }
-}
-
-/*  */
-
 /*  */
 /* Home */
 
