--- a/src/index.css
+++ b/src/index.css
@@ -999,6 +999,8 @@ li a:hover {
 .full-width {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
 }
 
@@ -1026,6 +1028,7 @@ li a:hover {
   margin-bottom: 30px;
   @media (max-width: 750px) {
     font-size: 21px;
+    margin-bottom: 20px;
   }
 }
 
@@ -1052,7 +1055,7 @@ li a:hover {
 
 /*! Product Card Main Start*/
 
-.categoryMain {
+.mainDiv {
   max-width: 1100px;
   width: 93%;
   padding-block: 32px;
@@ -1061,6 +1064,7 @@ li a:hover {
   }
   @media (max-width: 750px) {
     width: 94%;
+    padding-block: 24px;
   }
 }
 
@@ -1081,6 +1085,7 @@ li a:hover {
   }
   @media (max-width: 749px) {
     gap: 18px;
+    scrollbar-width: thin;
   }
 }
 
